Overflow has been hiddenFixed chrome mobile image overflow bug by makng the overflow hiddenby default

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -34,6 +34,7 @@ html {
     height: 100%;
     padding: 0;
     .open {
+      overflow: hidden;
       margin: 0;
       height: 100%;
       display: flex;
@@ -164,10 +165,6 @@ html {
         .project {
           margin: 1em 0em;
           padding: 1em;
-          h2,
-          p {
-            font-size: 0.9em;
-          }
         }
       }
     }
